@@ -70,7 +70,7 @@ toCurrent ipi@InstalledPackageInfo{} =
     Current.sourcePackageId    = pid,
     Current.installedUnitId    = Current.mkLegacyUnitId pid,
     Current.compatPackageKey   = "",
-    Current.abiHash            = Current.AbiHash "", -- bogus but old GHCs don't care.
+    Current.abiHash            = Current.mkAbiHash "", -- bogus but old GHCs don't care.
     Current.license            = convertLicense (license ipi),
     Current.copyright          = copyright ipi,
     Current.maintainer         = maintainer ipi,
